--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^0.13.4
   another_flushbar: ^1.10.29
   provider: ^6.0.3
+  pull_to_refresh: ^2.0.0
+
+
 
 dev_dependencies:
   flutter_test:
